<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activities.MainActivity"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="match_parent"
            android:contentDescription="@string/ic_home_logo_desc"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_logo" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_subject"
                    android:layout_width="match_parent"
                    android:autofillHints="no"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:fontFamily="@font/font_gilroy_medium"
                    android:hint="@string/et_searchSub"
                    android:ellipsize="end"
                    android:letterSpacing="0.03"
                    android:paddingHorizontal="16dp"
                    android:maxLines="1"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@id/iv_search"
                    android:paddingVertical="18dp"
                    android:textColorHint="@color/colorDark"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:src="@drawable/ic_search" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_search">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="62dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorWhite"
                    android:elevation="8dp"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/iv_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="19dp"
                        android:paddingVertical="18dp"
                        android:src="@drawable/ic_download" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_gilroy_medium"
                    android:letterSpacing="0.03"
                    android:text="@string/tv_download"
                    android:textColor="@color/colorDark"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorWhite"
                    android:elevation="8dp"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/iv_collection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="19dp"
                        android:paddingVertical="18dp"
                        android:src="@drawable/ic_collection" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_gilroy_medium"
                    android:letterSpacing="0.03"
                    android:text="@string/tv_collection"
                    android:textColor="@color/colorDark"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="62dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorWhite"
                    android:elevation="8dp"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/iv_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="19dp"
                        android:paddingVertical="18dp"
                        android:src="@drawable/ic_scan" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_gilroy_medium"
                    android:letterSpacing="0.03"
                    android:text="@string/tv_scan"
                    android:textColor="@color/colorDark"
                    android:textSize="12sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>